--- a/index.html
+++ b/index.html
@@ -19,16 +19,15 @@
   <div class="container">
     <img class="hero" src="images/illustration-hero.svg" alt="">
     <h1> Order Summary</h1>
-    <p>You can now listen to millions of songs, audiobooks, and podcasts on any
-      device anywhere you like!
-    </p>
-    <div>
+    <p class="description">You can now listen to millions of songs,<br> audiobooks, and podcasts on any
+      device <br> anywhere you like!</p>
+    <div class="pricing">
       <article class="pricing">
-      <img src="images/icon-music.svg" alt="">
-        <h3>Annual Plan</h3>
-        <p>$59.99/year</p>
-        <button class="btn button-change">Change</button>
+        <img src="images/icon-music.svg" alt="">
+        <h2>Annual Plan</h3>
+          <p class="price">$59.99/year</p>
       </article>
+      <button class="btn button-change">Change</button>
     </div>
     <div class="buttons">
       <button class="btn button-proceed">Proceed to Payment</button>
@@ -37,7 +36,7 @@
   </div>
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-    Coded by <a href="#"> Marc Lo Verde </a>.
+    Coded by <a href="https://www.mlv-online.com/"> Marc Lo Verde </a>.
   </div>
 </body>
 
