--- a/index.html
+++ b/index.html
@@ -21,13 +21,16 @@
     <h1> Order Summary</h1>
     <p class="description">You can now listen to millions of songs,<br> audiobooks, and podcasts on any
       device <br> anywhere you like!</p>
-    <div class="pricing">
+    <div>
       <article class="pricing">
-        <img src="images/icon-music.svg" alt="">
-        <h2>Annual Plan</h3>
-          <p class="price">$59.99/year</p>
+        <article class="box">
+          <img src="images/icon-music.svg" alt="">
+          <h2>Annual Plan
+            <p>$59.99/year</p>
+          </h2>
+        </article>
+        <button class="btn button-change">Change</button>
       </article>
-      <button class="btn button-change">Change</button>
     </div>
     <div class="buttons">
       <button class="btn button-proceed">Proceed to Payment</button>
