--- a/index.html
+++ b/index.html
@@ -21,17 +21,18 @@
     <h1> Order Summary</h1>
     <p class="description">You can now listen to millions of songs,<br> audiobooks, and podcasts on any
       device <br> anywhere you like!</p>
-    <div>
-      <article class="pricing">
-        <article class="box">
-          <img src="images/icon-music.svg" alt="">
-          <h2>Annual Plan
-            <p>$59.99/year</p>
-          </h2>
-        </article>
-        <button class="btn button-change">Change</button>
-      </article>
-    </div>
+      <div class="container-service">
+        <img src="./images/icon-music.svg" alt="">
+        <div class="selected-service">
+          <p class="selected-plan">
+            Annual Plan
+          </p>
+          <p class="plan-price">$59.99/year</p>
+        </div>
+        <button class="btn button-change">
+          Change
+        </button>
+      </div>
     <div class="buttons">
       <button class="btn button-proceed">Proceed to Payment</button>
       <button class="btn button-cancel">Cancel Order</button>
